# usbip-esp32p4

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
components/access_control/: CMakeLists.txt  access_control.c
components/access_control/include/: access_control.h
components/capture/: CMakeLists.txt  Kconfig  capture.c  capture_api.c
components/capture/include/: capture.h
components/device_manager/: CMakeLists.txt  device_manager.c
components/device_manager/include/: device_manager.h
components/event_log/: CMakeLists.txt  event_log.c
components/event_log/include/: event_log.h
components/network_mgr/: CMakeLists.txt  network_mgr.c
components/network_mgr/include/: network_mgr.h
components/transfer_engine/: CMakeLists.txt  transfer_engine.c  transfer_iso.c
components/transfer_engine/include/: transfer_engine.h  transfer_iso.h
components/usb_host_mgr/: CMakeLists.txt  usb_host_mgr.c
components/usb_host_mgr/include/: usb_host_mgr.h
components/usbip_proto/: CMakeLists.txt  usbip_proto.c
components/usbip_proto/include/: usbip_proto.h
components/usbip_server/: CMakeLists.txt  usbip_connection.c  usbip_server.c
components/usbip_server/include/: usbip_server.h
components/webui/: CMakeLists.txt  webui.c  webui_api.c  ws_handler.c
components/webui/frontend/: app.js  htmx.min.js  index.html  settings.html  style.css
components/webui/include/: webui.h
docs/superpowers/plans/: 2026-03-27-webui-redesign.md
docs/superpowers/specs/: 2026-03-27-pcap-capture-design.md  (+1 more)
main/: CMakeLists.txt  Kconfig.projbuild  main.c
